force-app/main/default/objects/Fleet_Setting__mdt/Fleet_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Fleet Setting</label>
    <pluralLabel>Fleet Settings</pluralLabel>
</CustomObject>