force-app/main/default/objects/Fleet_Setting__mdt/fields/Auto_Curation_Cron__c.field-meta.xml
<CustomField>
    <fullName>Auto_Curation_Cron__c</fullName>
    <label>Auto Curation Cron</label>
    <type>Text</type>
    <length>120</length>
</CustomField>