force-app/main/default/objects/Fleet_Setting__mdt/fields/Auto_Curation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Curation_Enabled__c</fullName>
    <label>Auto Curation Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>