force-app/main/default/objects/Fleet_Setting__mdt/fields/CI_Gate_Enabled__c.field-meta.xml
<CustomField>
    <fullName>CI_Gate_Enabled__c</fullName>
    <label>CI Gate Enabled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>