force-app/main/default/objects/Fleet_Setting__mdt/fields/Default_Schedule_Cron__c.field-meta.xml
<CustomField>
    <fullName>Default_Schedule_Cron__c</fullName>
    <label>Default Schedule Cron</label>
    <type>Text</type>
    <length>120</length>
</CustomField>