force-app/main/default/objects/Fleet_Setting__mdt/fields/Judge_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Judge_Template_Name__c</fullName>
    <label>Judge Template Name</label>
    <type>Text</type>
    <length>120</length>
</CustomField>