force-app/main/default/objects/Fleet_Setting__mdt/fields/Max_Cases_Per_Run__c.field-meta.xml
<CustomField>
    <fullName>Max_Cases_Per_Run__c</fullName>
    <label>Max Cases Per Run</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>