force-app/main/default/objects/Fleet_Setting__mdt/fields/Monitoring_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Monitoring_Enabled__c</fullName>
    <label>Monitoring Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>