force-app/main/default/objects/Fleet_Setting__mdt/fields/Prefilter_Upper_Bound__c.field-meta.xml
<CustomField>
    <fullName>Prefilter_Upper_Bound__c</fullName>
    <label>Prefilter Upper Bound</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>4</scale>
</CustomField>