force-app/main/default/objects/Fleet_Setting__mdt/fields/Retention_Days_Trace__c.field-meta.xml
<CustomField>
    <fullName>Retention_Days_Trace__c</fullName>
    <label>Retention Days Trace</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>