force-app/main/default/objects/Fleet_Setting__mdt/fields/Trueness_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Trueness_Threshold__c</fullName>
    <label>Trueness Threshold</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>